Initial version of app completed.

--- a/todo.html
+++ b/todo.html
@@ -20,8 +20,11 @@
 	<div id="container">
 		<!-- Title bar -->
 		<h1>My Todo List <i class="fa fa-plus" aria-hidden="true"></i></h1>
-		<!-- New todo input. -->
-		<input type="text" placeholder="Enter a new todo.">
+		<!-- New todo input container for transition purposes. -->
+		<div id="inputDiv" style="max-height: 0px">
+			<!-- New todo input. -->
+			<input type="text" placeholder="Enter a new todo.">
+		</div>
 		<!-- List of default todos. -->
 		<ul>
 			<li>Buy a car. <span><i class="fa fa-trash-o fa-lg" aria-hidden="true"></i></span></li>
