--- a/todo.html
+++ b/todo.html
@@ -19,9 +19,9 @@
 	<!-- Main todo list container -->
 	<div id="container">
 		<!-- Title bar -->
-		<h1>My Todo List <i class="fa fa-plus" aria-hidden="true"></i></h1>
+		<h1>My Todo List <i class="fa fa-plus"></i></h1>
 		<!-- New todo input container for transition purposes. -->
-		<div id="inputDiv" style="max-height: 0px">
+		<div id="inputDiv" style="max-height:0">
 			<!-- New todo input. -->
 			<input type="text" placeholder="Enter a new todo.">
 		</div>
